Split off pending images view
